--- a/index.html
+++ b/index.html
@@ -1,227 +1,151 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon" />
     <title>Portifolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#moon">
-                        HOME
-                    </a>
-                </li>
-                <li>
-                    <a href="#prog">
-                        PROJETOS
-                    </a>
-                </li>
-                <li>
-                    <a href="#iframe">
-                        NOS-CONTRATE
-                    </a>
-                </li>
-            </ul>
-        </nav>
-  <video src="CRIE SEU PRÓPRIO AMBIENTE DIGITAL CONOSCO.mp4" autoplay controls="0" loop muted></video>
-        <picture id="moon">
-            <img src="lokoPK.png" alt="">
+      <nav>
+        <ul>
+          <li>
+            <a href="#moon">HOME</a>
+          </li>
+          <li>
+            <a href="#prog">PROJETOS</a>
+          </li>
+          <li>
+            <a href="#iframe">NOS-CONTRATE</a>
+          </li>
+        </ul>
+        <picture id="moon" style="max-width: 285px;">
+          <img src="lokoPK.png" alt="" />
         </picture>
+        <h1 style="color: #230D73; text-align: justify; max-width: 500px;"><strong style="color: rgb(45, 84, 255);">PK Digital Products</strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.</h1>
+        <p style="color: white; font-size: medium;">A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.</p>
+        <h1>Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões</h1>
+              <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; will-change: transform;">
+          <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+        </div>
+       </nav>
     </header>
-        <h1 style="color: #230D73; text-align: justify; max-width: 500px;">
-        <strong style="color: rgb(45, 84, 255);">PK Digital Products</strong>, reconhecida por sua qualidade, inovação e
-        atendimento personalizado.
-    </h1>
-    <p style="color: white; font-size: medium;">
-        A empresa conta com uma equipe de profissionais altamente qualificados, que estão sempre atualizados com as
-        últimas tendências tecnológicas.
-    </p>
-    <h1>
-        Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-    </h1>
-      <section>
-        <h1>
-            Venha conversar e compartilhe sua ideia conosco.
-        </h1>
-        <p>
-            Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o
-            time de Desenvolvedores
-        </p>
+   <section>
+      <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
+      <p>Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de Desenvolvedores</p>
     </section>
     <section>
-        <p>
-            Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
-            que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
-            profissional' que você a tempos sonha em ter
-        </p>
+      <p>
+        Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos sonha em ter
+      </p>
     </section>
+    <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
     <p>
-        Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
+      Clique
+      <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
     </p>
-    <p>
-        Clique
-        <a href="#form" target="_blank">
-            <button type="button" id="ixd01">
-                aqui
-            </button>
-        </a> para
-        acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
-    </p>
-    <h1 id="prog">
-        Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
-    </h1>
+    <h1 id="prog">Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.</h1>
     <div style="background: #230D73; color: white;">
-        <p style="color: white; font-size: larger; text-align: center;">
-            Clique em alguns... fique avontade
-        </p>
-        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-            <button>
-                Barber shop platform
-                <picture id="miniLogoProjetos">
-                    <img src="logoBarbeiro.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
-            <button>
-                Duarte & Santos
-                <picture id="miniLogoProjetos">
-                    <img src="logoADV.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
-            <button>
-                Homem-Arranha
-                <picture id="miniLogoProjetos">
-                    <img src="logoHomemAranha.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
-            <button>
-                CRM
-                <picture id="miniLogoProjetos">
-                    <img src="iconsMoon.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
-            <button>
-                Multiplanos
-                <picture id="miniLogoProjetos">
-                    <img src="Multiplanos.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
-            <button>
-                Zap Selling
-                <picture id="miniLogoProjetos">
-                    <img src="logo Zap Selling.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
-            <button>
-                Pizzabot
-                <picture id="miniLogoProjetos">
-                    <img src="logoStevePizza.png" alt="">
-                </picture>
-            </button>
-        </a>
-        <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-            <button>
-                Guia do Programador
-                <picture id="miniLogoProjetos">
-                    <img src="logoGuiaDoProgramador.png" alt="">
-                </picture>
-            </button>
-        </a>
+      <p style="color: white; font-size: larger; text-align: center;">Clique em alguns... fique avontade</p>
+      <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+        <button>
+          Barber shop platform<picture id="miniLogoProjetos">
+            <img src="logoBarbeiro.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
+        <button>
+          Duarte & Santos<picture id="miniLogoProjetos">
+            <img src="logoADV.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
+        <button>
+          Homem-Arranha<picture id="miniLogoProjetos">
+            <img src="logoHomemAranha.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
+        <button>
+          CRM<picture id="miniLogoProjetos">
+            <img src="iconsMoon.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
+        <button>
+          Multiplanos<picture id="miniLogoProjetos">
+            <img src="Multiplanos.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
+        <button>
+          Zap Selling<picture id="miniLogoProjetos">
+            <img src="logo Zap Selling.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+        <button>
+          Pizzabot<picture id="miniLogoProjetos">
+            <img src="logoStevePizza.png" alt="" />
+          </picture>
+        </button>
+      </a>
+      <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+        <button>
+          Guia do Programador<picture id="miniLogoProjetos">
+            <img src="logoGuiaDoProgramador.png" alt="" />
+          </picture>
+        </button>
+      </a>
     </div>
     <p>
-        Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
-            UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
-        <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda
-        de
-        scripts ou modelos.
+      Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
+      <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
-    <p>
-        Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
-        computação e uma mistura de
-        engenharia social.
-    </p>
+    <p>Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e uma mistura de engenharia social.</p>
     <picture id="grafico">
-        <img src="lucro.png" alt="">
+      <img src="lucro.png" alt="" />
     </picture>
-    <h1 id="form">
-        <strong>
-            Aguardo ancioso para um entrevista.
-        </strong>
-    </h1>
-        <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img style="border-radius: 15px;"
-            src="digital.png" alt="digital"></a>
-    <iframe id="iframe" width="100%" height="700px"
-        src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-        frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
+    <h1 id="form"><strong>Aguardo ancioso para um entrevista.</strong></h1>
+    <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img style="border-radius: 15px;" src="digital.png" alt="digital" /></a>
+    <iframe id="iframe" width="100%" height="700px" src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true" frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
     <p style="text-align: center;">
-        <strong style="color: #230D73;">ATENÇÃO !</strong>
+      <strong style="color: #230D73;">ATENÇÃO !</strong>
     </p>
-    <label>
-        RESUMINDO
-        (CRIAMOS PLATAFORMAS PARA
-        INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-        CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-    </label>
+    <label>RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)</label>
     <p>
-        Clique
-        <a href="https://iplis.ru/meu-portifolio" target="_blank">
-            <button type="button" id="ixd01">
-                aqui
-            </button>
-        </a>
-        para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
+      Clique
+      <a href="https://iplis.ru/meu-portifolio" target="_blank"><button type="button" id="ixd01">aqui</button></a>
+      para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
     </p>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-    padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; will-change: transform;">
-        <iframe loading="lazy"
-            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
-            allowfullscreen="allowfullscreen" allow="fullscreen">
-        </iframe>
-    </div>
-    <footer>
-        <p>
-            Desenvolvido por
-            <a href="https://www.instagram.com/nike_developer/" target="_blank">
-                <strong style="color: #230D73;">
-                    Nike
-                </strong>
-            </a>
-            para a empresa
-            <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <strong style="color: #230D73;">
-                    PK Produtos Digitais
-                </strong>
-                <img src="iconsMoon.png" alt="">
-            </a>
-        </p>
-        <picture id="redesSociais">
-            <img src="facebook.png" alt="">
-            <img src="instagram.png" alt="">
-            <img src="twitter.png" alt="">
-        </picture>
+     <footer>
+      <p>
+        Desenvolvido por
+        <a href="https://www.instagram.com/nike_developer/" target="_blank"><strong style="color: #230D73;">Nike</strong></a>
+        para a empresa
+        <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+          <strong style="color: #230D73;">PK Produtos Digitais</strong>
+          <img src="iconsMoon.png" alt="" />
+        </a>
+      </p>
+      <picture id="redesSociais">
+        <img src="facebook.png" alt="" />
+        <img src="instagram.png" alt="" />
+        <img src="twitter.png" alt="" />
+      </picture>
     </footer>
-</body>
-
+  </body>
 </html>
