--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
-      <img src="whatsapp.png" alt="" style="display: block; position: fixed; right: 0; padding: 15px; bottom: 0;">
+      <img src="whatsapp.png" alt="" style="display: block; position: fixed; right: 0; padding: 15px; bottom: 0; max-width: 85px;">
     </a>
   </picture>
   <header>
