--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
-      <img src="whatsapp.png" alt="" style="display: block; position: fixed; right: 0; padding: 15px; bottom: 0; max-width: 85px;">
+      <img src="whatsapp.png" alt=""
+        style="display: block; position: fixed; right: 0; padding: 15px; bottom: 0; max-width: 85px;">
     </a>
   </picture>
   <header>
-    <nav>
+    <nav style="border-bottom: 1px solid #230D73; max-width: 600px; margin: auto; background-color: #230d731a;">
       <ul>
         <li>
           <a href="#moon">HOME</a>
@@ -30,16 +31,27 @@
           <a href="#iframe">NOS-CONTRATE</a>
         </li>
       </ul>
-      <h1 style="color: #230D73; text-align: justify; max-width: 500px;"><strong style="color: rgb(45, 84, 255);">PK
-          Digital Products</strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.</h1>
-      <p style="color: white; font-size: medium;">A empresa conta com uma equipe de profissionais altamente
-        qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.</p>
-      <h1>Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões</h1>
     </nav>
+    <h1 style="color: #230D73; text-align: justify; max-width: 500px;">
+      <strong style="color: rgb(45, 84, 255);">
+        PK Digital Products
+      </strong>
+      , reconhecida por sua qualidade, inovação e atendimento personalizado.
+    </h1>
+    <p style="color: white; font-size: medium;">
+      A empresa conta com uma equipe de profissionais altamente
+      qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
+    </p>
+    <h1>
+      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>
   </header>
   <section>
-    <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
-    <p>Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
+    <h1>Venha conversar e compartilhe sua ideia conosco.
+
+    </h1>
+    <p>
+      Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
       Desenvolvedores</p>
   </section>
   <section>
@@ -50,12 +62,12 @@
     </p>
   </section>
   <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
-  <p>
+  <p style="background-color: #230d731a;">
     Clique
     <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao <strong
       style="color:#230D73">formulario</strong> de inscrição.
   </p>
-   <p>
+  <p>
     Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x UX</strong> e estrategistas
     de trafego
     <strong style="color: #230D73">
@@ -80,17 +92,17 @@
   <iframe id="iframe" width="100%" height="700px"
     src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
     frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
-  <p style="text-align: center;">
-  <footer>
-    <strong>
-      ATENÇÃO !
-    </strong>
+  <footer style="background-color: #230d731a; padding: 5px;">
+    <h2 style="text-align: center;">
+      <strong>
+        ATENÇÃO !
+      </strong>
+    </h2>
+    <p style="text-align: center;">
+    RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM,
+    CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
     </p>
-    <label>
-      RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM,
-      CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-    </label>
-    <p>
+    <p style="background-color: white;">
       Clique
       <a href="https://iplis.ru/meu-portifolio" target="_blank"><button type="button" id="ixd01">aqui</button></a>
       para ter mais informações do nosso
@@ -103,15 +115,8 @@
       <img src="instagram.png" alt="" />
       <img src="twitter.png" alt="" />
     </picture>
-    <div
-      style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; will-change: transform;">
-      <iframe loading="lazy"
-        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
-        allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
-    </div>
-    <p style="background-color: white; color: #230D73;">
+     </footer>
+     <p style="background-color: white; color: #230D73;">
       Desenvolvido por
       <a href="https://www.instagram.com/nike_developer/" target="_blank">
         <strong>
@@ -126,7 +131,14 @@ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6e
         <img src="iconsMoon.png" alt="" />
       </a>
     </p>
-  </footer>
+  <div
+    style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
+padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
+    <iframe loading="lazy"
+      style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+      src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
+      allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+  </div>
 </body>
 
 </html>
