--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
   <title>Portifolio</title>
 </head>
 
@@ -32,7 +32,9 @@
         </li>
       </ul>
     </nav>
-    <h1 style="color: #230D73; text-align: justify; max-width: 500px;">
+    <video src="Infinity.mp4" muted autoplay="none" controls="none" loop style="">
+    </video>
+    <h1 style="color: #230D73; text-align: justify;">
       <strong style="color: rgb(45, 84, 255);">
         PK Digital Products
       </strong>
@@ -99,8 +101,8 @@
       </strong>
     </h2>
     <p style="text-align: center;">
-    RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM,
-    CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+      RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM,
+      CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
     </p>
     <p style="background-color: white;">
       Clique
@@ -115,22 +117,22 @@
       <img src="instagram.png" alt="" />
       <img src="twitter.png" alt="" />
     </picture>
-     </footer>
-     <p style="background-color: white; color: #230D73;">
-      Desenvolvido por
-      <a href="https://www.instagram.com/nike_developer/" target="_blank">
-        <strong>
-          Nike
-        </strong>
-      </a>
-      para a empresa
-      <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-        <strong>
-          PK Produtos Digitais
-        </strong>
-        <img src="iconsMoon.png" alt="" />
-      </a>
-    </p>
+  </footer>
+  <p style="background-color: white; color: #230D73;">
+    Desenvolvido por
+    <a href="https://www.instagram.com/nike_developer/" target="_blank">
+      <strong>
+        Nike
+      </strong>
+    </a>
+    para a empresa
+    <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+      <strong>
+        PK Produtos Digitais
+      </strong>
+      <img src="iconsMoon.png" alt="" />
+    </a>
+  </p>
   <div
     style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
 padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
