--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </a>
   </picture>
   <header>
-    <nav style="border-bottom: 1px solid #230D73; max-width: 600px; margin: auto; background-color: #230d731a;">
+    <nav>
       <ul>
         <li>
           <a href="#moon">HOME</a>
@@ -32,15 +32,14 @@
         </li>
       </ul>
     </nav>
-    <video src="Infinity.mp4" muted autoplay="none" controls="none" loop style="">
-    </video>
     <h1 style="color: #230D73; text-align: justify;">
       <strong style="color: rgb(45, 84, 255);">
         PK Digital Products
-      </strong>
-      , reconhecida por sua qualidade, inovação e atendimento personalizado.
+      </strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
     </h1>
-    <p style="color: white; font-size: medium;">
+    <video src="Infinity.mp4" muted autoplay="none" controls="none" loop style="">
+    </video>
+    <p style="color: white; font-size: medium; max-width: 500px;">
       A empresa conta com uma equipe de profissionais altamente
       qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
     </p>
@@ -49,9 +48,6 @@
     </h1>
   </header>
   <section>
-    <h1>Venha conversar e compartilhe sua ideia conosco.
-
-    </h1>
     <p>
       Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
       Desenvolvedores</p>
@@ -66,9 +62,58 @@
   <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
   <p style="background-color: #230d731a;">
     Clique
-    <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao <strong
-      style="color:#230D73">formulario</strong> de inscrição.
+    <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao
+    <strong>formulario</strong> de inscrição.
   </p>
+  <section>
+    <h2>Nossa Missão</h2>
+    <ul>
+      <li>Elevar marcas e ideias a novos patamares</li>
+      <li>Criar conexões autênticas</li>
+      <li>Gerar resultados tangíveis</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Nossa Visão</h2>
+    <p>Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
+      gerar resultados excepcionais para seus clientes.</p>
+  </section>
+
+  <section>
+    <h2>Nossos Valores</h2>
+    <ul>
+      <li>Criatividade</li>
+      <li>Paixão</li>
+      <li>Excelência</li>
+      <li>Comprometimento</li>
+      <li>Transparência</li>
+      <li>Respeito</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>O que nos diferencia</h2>
+    <ul>
+      <li>Experiência e Expertise</li>
+      <li>Criatividade Inovadora</li>
+      <li>Visão Estratégica</li>
+      <li>Foco em Resultados</li>
+      <li>Atendimento Personalizado</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
+    <ul>
+      <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
+      <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
+      <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
+    </ul>
+    <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
+    <p>Seja bem-vindo à PK Produções!</p>
+  </section>
+  <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
   <p>
     Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x UX</strong> e estrategistas
     de trafego
