--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         PK Digital Products
       </strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
     </h1>
-    <video src="Infinity.mp4" muted autoplay="none" controls="none" loop style="">
+    <video src="Infinity.mp4" muted="on" autoplay controls="0" loop style="">
     </video>
     <p style="color: white; font-size: medium; max-width: 500px;">
       A empresa conta com uma equipe de profissionais altamente
@@ -79,7 +79,7 @@
     <p>Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
       gerar resultados excepcionais para seus clientes.</p>
   </section>
-
+<p style="color: rgb(255, 217, 0) ;"></p>
   <section>
     <h2>Nossos Valores</h2>
     <ul>
