--- a/index.html
+++ b/index.html
@@ -21,32 +21,33 @@
   <header>
     <nav>
       <ul>
-        <li>
-          <a href="#moon">HOME</a>
-        </li>
-        <li>
-          <a href="#prog">PROJETOS</a>
-        </li>
-        <li>
-          <a href="#iframe">NOS-CONTRATE</a>
-        </li>
+          <li>
+              <a href="index.html">
+                  HOME
+              </a>
+          </li>
+          <li style="float: right;">
+              <a href="formulario de inscrição.html">
+                  NOS-CONTRATE
+              </a>
+          </li>
       </ul>
-    </nav>
-    <h1 style="color: #230D73; text-align: justify;">
-      <strong style="color: rgb(45, 84, 255);">
-        PK Digital Products
-      </strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
-    </h1>
+  </nav>
     <video src="Infinity.mp4" muted="on" autoplay controls="0" loop style="">
     </video>
-    <p style="color: white; font-size: medium; max-width: 500px;">
-      A empresa conta com uma equipe de profissionais altamente
-      qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
-    </p>
-    <h1>
-      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-    </h1>
-  </header>
+      </header>
+  <h1 style="color: #230D73; text-align: justify;">
+    <strong style="color: rgb(45, 84, 255);">
+      PK Digital Products
+    </strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
+  </h1>
+  <p style="color: white; font-size: medium; max-width: 500px;">
+    A empresa conta com uma equipe de profissionais altamente
+    qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
+  </p>
+  <h1>
+    Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+  </h1>
   <section>
     <p>
       Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
@@ -136,10 +137,7 @@
   <h1 id="form"><strong>Aguardo ancioso para um entrevista.</strong></h1>
   <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
       style="border-radius: 15px; display: block; margin: auto;" src="digital.png" alt="digital" /></a>
-  <iframe id="iframe" width="100%" height="700px"
-    src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-    frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
-  <footer style="background-color: #230d731a; padding: 5px;">
+   <footer style="background-color: #230d731a; padding: 5px;">
     <h2 style="text-align: center;">
       <strong>
         ATENÇÃO !
