--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </li>
       </ul>
   </nav>
-    <video src="Infinity.mp4" muted autoplay controls="none" loop style="">
+    <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
     </video>
       </header>
   <h1 style="color: #230D73; text-align: justify;">
