--- a/index.html
+++ b/index.html
@@ -33,19 +33,17 @@
           </li>
       </ul>
   </nav>
-    <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-    </video>
-      </header>
-  <h1 style="color: #230D73; text-align: justify;">
-    <strong style="color: rgb(45, 84, 255);">
-      PK Digital Products
-    </strong>, reconhecida por sua qualidade, inovação e atendimento personalizado.
-  </h1>
-  <p style="color: white; font-size: medium; max-width: 500px;">
-    A empresa conta com uma equipe de profissionais altamente
-    qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
-  </p>
-  <h1>
+        </header>
+        <h1 style="color: #230D73; text-align: justify;">
+          PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
+      </h1>
+      <p style="color: white; font-size: medium; max-width: 500px;">
+        A empresa conta com uma equipe de profissionais altamente
+        qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
+      </p>
+          <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+          </video>
+   <h1>
     Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
   </h1>
   <section>
