--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
       <img src="whatsapp.png" alt=""
-        style="display: block; position: fixed; right: 0; padding: 15px; bottom: 0; max-width: 85px;">
+        style="display: block; position: fixed; right: 0; padding: 25px; bottom: 0; max-width: 85px;">
     </a>
   </picture>
   <header>
-    <nav>
+    <!-- <nav>
       <ul>
-          <li>
-              <a href="index.html">
-                  HOME
-              </a>
-          </li>
-          <li style="float: right;">
-              <a href="formulario de inscrição.html">
-                  NOS-CONTRATE
-              </a>
-          </li>
+        <li>
+          <a href="index.html">
+            HOME
+          </a>
+        </li>
+        <li style="float: right;">
+          <a href="formulario de inscrição.html">
+            NOS-CONTRATE
+          </a>
+        </li>
       </ul>
-  </nav>
-        </header>
-        <h1 style="color: #230D73; text-align: justify;">
-          PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
-      </h1>
-      <p style="color: white; font-size: medium; max-width: 500px;">
-        A empresa conta com uma equipe de profissionais altamente
-        qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
-      </p>
-          <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-          </video>
-   <h1>
+    </nav> -->
+    <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+    </video>
+  </header>
+  <h1 style="color: #230D73; text-align: justify;">
+    PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
+  </h1>
+  <p style=" font-size: medium; max-width: 500px;">
+    A empresa conta com uma equipe de profissionais altamente
+    qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
+  </p>
+  <h1>
     Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
   </h1>
   <section>
@@ -78,7 +78,7 @@
     <p>Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
       gerar resultados excepcionais para seus clientes.</p>
   </section>
-<p style="color: rgb(255, 217, 0) ;"></p>
+  <p style="color: rgb(255, 217, 0) ;"></p>
   <section>
     <h2>Nossos Valores</h2>
     <ul>
@@ -135,7 +135,7 @@
   <h1 id="form"><strong>Aguardo ancioso para um entrevista.</strong></h1>
   <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
       style="border-radius: 15px; display: block; margin: auto;" src="digital.png" alt="digital" /></a>
-   <footer style="background-color: #230d731a; padding: 5px;">
+  <footer style="background-color: #230d731a; padding: 5px;">
     <h2 style="text-align: center;">
       <strong>
         ATENÇÃO !
