--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         </li>
       </ul>
     </nav> -->
+    </header>
+    <video src="primeiro.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+    </video>
     <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
     </video>
-  </header>
   <h1 style="color: #230D73; text-align: justify;">
     PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
   </h1>
