--- a/index.html
+++ b/index.html
@@ -19,25 +19,35 @@
     </a>
   </picture>
   <header>
-    <!-- <nav>
+    <nav>
       <ul>
         <li>
           <a href="index.html">
             HOME
           </a>
         </li>
+        <li>
+          <a href="#">
+            CURSOS
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+            BLOG
+          </a>
+        </li>
         <li style="float: right;">
           <a href="formulario de inscrição.html">
-            NOS-CONTRATE
+            AFILIADOS
           </a>
         </li>
       </ul>
-    </nav> -->
-    </header>
-    <video src="primeiro.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-    </video>
-    <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-    </video>
+    </nav>
+  </header>
+  <video src="primeiro.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+  </video>
+  <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+  </video>
   <h1 style="color: #230D73; text-align: justify;">
     PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
   </h1>
