--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
       </ul>
     </nav>
   </header>
-  <video src="primeiro.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-  </video>
-  <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-  </video>
+  <picture id="irina-blok">
+    <source media="(max-width: 900px)" srcset="primeiro.mp4">
+    <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+    </video>
+    </source>
+  </picture>
+
   <h1 style="color: #230D73; text-align: justify;">
     PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
   </h1>
