--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       </ul>
     </nav>
   </header>
-  <picture id="irina-blok">
-    <source media="(max-width: 500px)" srcset="primeiro.mp4">
-    <video src="Infinity.mp4" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-    </video>
-    </source>
+  <picture>
+  <video controls>
+    <source src="primeiro.mp4" media="(max-width: 300px)" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+    <source src="Infinity.mp4" media="(min-width: 301px)" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+  </video>
   </picture>
 
   <h1 style="color: #230D73; text-align: justify;">
