--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </nav>
   </header>
   <picture>
-  <video controls>
-    <source src="primeiro.mp4" media="(max-width: 300px)" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
-    <source src="Infinity.mp4" media="(min-width: 301px)" muted autoplay loop style="video::-internal-media-controls{ display: none;}">
+  <video muted autoplay loop controls>
+    <source src="primeiro.mp4" media="(max-width: 300px)">
+    <source src="Infinity.mp4" media="(min-width: 301px)">
   </video>
   </picture>
 
