--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </nav>
   </header>
   <picture>
-  <video muted autoplay loop controls>
-    <source src="primeiro.mp4" media="(max-width: 500px)">
-    <source src="Infinity.mp4" media="(min-width: 501px)">
+  <video muted autoplay loop>
+    <source src="primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}" >
+    <source src="Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}" >
   </video>
   </picture>
 
