--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
       <img src="whatsapp.png" alt=""
-        style="display: block; position: fixed; right: 0; padding: 25px; bottom: 0; max-width: 85px;">
+        style="display: block; position: fixed; right: 0; padding: 25px; bottom: 0; max-width: 285px; border-radius: 25px;">
     </a>
   </picture>
   <header>
