--- a/formulario de inscrição.html
+++ b/formulario de inscrição.html
@@ -14,10 +14,9 @@
 <body>
     <picture id="btnWhatsapp">
         <a href="https://maper.info/29j736" target="_blank">
-            <img src="whatsapp.png" alt=""
-                style="display: block; position: fixed; right: 0; padding: 15px; bottom: 0; max-width: 85px;">
+          <img src="whatsapp.png" alt="">
         </a>
-    </picture>
+      </picture>
     <header>
         <nav>
             <ul>
