--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
-      <img src="whatsapp.png" alt=""
-        style="display: block; position: fixed; right: 0; padding: 25px; bottom: 0; max-width: 285px; border-radius: 25px;">
-    </a>
+      <video src="FALE CONOSCO.mp4" muted autoplay loop>
+      </video>
+            </a>
   </picture>
   <header>
     <nav>
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+          <a href="https://www.instagram.com/ti.udia/" target="_blank">
             BLOG
           </a>
         </li>
@@ -44,112 +44,115 @@
       </ul>
     </nav>
   </header>
-  <picture>
   <video muted autoplay loop>
     <source src="primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}" >
     <source src="Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}" >
   </video>
-  </picture>
-
-  <h1 style="color: #230D73; text-align: justify;">
-    PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
-  </h1>
-  <p style=" font-size: medium; max-width: 500px;">
-    A empresa conta com uma equipe de profissionais altamente
-    qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
-  </p>
-  <h1>
-    Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-  </h1>
-  <section>
-    <p>
-      Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
-      Desenvolvedores</p>
-  </section>
-  <section>
-    <p>
-      Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
-      <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
-      sonha em ter
+  <div class="interface">
+    <h1 style="color: #230D73; text-align: justify;">
+      PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
+    </h1>
+    <p style=" font-size: medium; max-width: 500px;background-color: #230d731a;">
+      A empresa conta com uma equipe de profissionais altamente
+      qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
     </p>
-  </section>
+    <h1>
+      Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+    </h1>
+    <section>
+      <p>
+        Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de
+        Desenvolvedores</p>
+    </section>
+    <section>
+      <p>
+        Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta que a empresa
+        <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site profissional' que você a tempos
+        sonha em ter
+      </p>
+    </section>
+  </div>
+  <div style="background-color: #230d731a;">
   <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
-  <p style="background-color: #230d731a;">
+  <p>
     Clique
     <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao
     <strong>formulario</strong> de inscrição.
   </p>
-  <section>
-    <h2>Nossa Missão</h2>
-    <ul>
-      <li>Elevar marcas e ideias a novos patamares</li>
-      <li>Criar conexões autênticas</li>
-      <li>Gerar resultados tangíveis</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Nossa Visão</h2>
-    <p>Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
-      gerar resultados excepcionais para seus clientes.</p>
-  </section>
-  <p style="color: rgb(255, 217, 0) ;"></p>
-  <section>
-    <h2>Nossos Valores</h2>
-    <ul>
-      <li>Criatividade</li>
-      <li>Paixão</li>
-      <li>Excelência</li>
-      <li>Comprometimento</li>
-      <li>Transparência</li>
-      <li>Respeito</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>O que nos diferencia</h2>
-    <ul>
-      <li>Experiência e Expertise</li>
-      <li>Criatividade Inovadora</li>
-      <li>Visão Estratégica</li>
-      <li>Foco em Resultados</li>
-      <li>Atendimento Personalizado</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
-    <ul>
-      <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
-      <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
-      <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
-    </ul>
-    <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
-    <p>Seja bem-vindo à PK Produções!</p>
-  </section>
-  <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
-  <p>
-    Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x UX</strong> e estrategistas
-    de trafego
-    <strong style="color: #230D73">
-      organico
-    </strong>
-    e
-    <strong style="color:#230D73">
-      pago
-    </strong>
-    atuamos principalmente com a venda e revenda de scripts ou modelos.
-  </p>
-  <p>
-    Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e uma
-    mistura de engenharia social.
-  </p>
-  <picture id="grafico">
-    <img src="lucro.png" alt="" />
-  </picture>
-  <h1 id="form"><strong>Aguardo ancioso para um entrevista.</strong></h1>
-  <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
-      style="border-radius: 15px; display: block; margin: auto;" src="digital.png" alt="digital" /></a>
+</div>
+    <div class="interface">        
+    <section>
+      <h2>Nossa Missão</h2>
+      <ul>
+        <li>Elevar marcas e ideias a novos patamares</li>
+        <li>Criar conexões autênticas</li>
+        <li>Gerar resultados tangíveis</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Nossa Visão</h2>
+      <p style="background-color: #230d731a;">
+        Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
+        gerar resultados excepcionais para seus clientes.</p>
+    </section>
+    <p style="color: rgb(255, 217, 0) ;"></p>
+    <section>
+      <h2>Nossos Valores</h2>
+      <ul>
+        <li>Criatividade</li>
+        <li>Paixão</li>
+        <li>Excelência</li>
+        <li>Comprometimento</li>
+        <li>Transparência</li>
+        <li>Respeito</li>
+      </ul>
+    </section>
+    <section>
+      <h2>O que nos diferencia</h2>
+      <ul>
+        <li>Experiência e Expertise</li>
+        <li>Criatividade Inovadora</li>
+        <li>Visão Estratégica</li>
+        <li>Foco em Resultados</li>
+        <li>Atendimento Personalizado</li>
+      </ul>
+    </section>
+    <section>
+      <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
+      <ul>
+        <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
+        <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
+        <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
+      </ul>
+      <p>Juntos, vamos transformar suas ideias em experiências memoráveis e gerar resultados impactantes.</p>
+      <p>Seja bem-vindo à PK Produções!</p>
+    </section>
+    <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
+    <p style="background-color: #230d731a;">
+      Aqui você vai encontrar um grupo de 
+      <strong style="color:#230D73">
+        Desenvolvedores, UI x UX
+          </strong>
+           e estrategistas de trafego
+      <strong style="color: #230D73">
+        organico
+      </strong>
+      e
+      <strong style="color:#230D73">
+        pago
+      </strong>
+      atuamos principalmente com a venda e revenda de scripts ou modelos.
+    </p>
+    <p>
+      Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e uma mistura de engenharia social.
+    </p>
+    <picture id="grafico">
+      <img src="lucro.png" alt=""/>
+    </picture>
+    <h1 id="form">
+      Aguardo ancioso para um entrevista.
+    </h1>
+  </div>
   <footer style="background-color: #230d731a; padding: 5px;">
     <h2 style="text-align: center;">
       <strong>
@@ -157,12 +160,14 @@
       </strong>
     </h2>
     <p style="text-align: center;">
-      RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM,
-      CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+      RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
     </p>
     <p style="background-color: white;">
       Clique
-      <a href="https://iplis.ru/meu-portifolio" target="_blank"><button type="button" id="ixd01">aqui</button></a>
+      <a href="https://iplis.ru/meu-portifolio" target="_blank"><button type="button" id="ixd01">
+        aqui
+      </button>
+    </a>
       para ter mais informações do nosso
       <strong>
         Portifolio
@@ -182,20 +187,20 @@
       </strong>
     </a>
     para a empresa
-    <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+    <a href="https://www.instagram.com/ti.udia/" target="_blank">
       <strong>
         PK Produtos Digitais
       </strong>
-      <img src="iconsMoon.png" alt="" />
+      <img src="iconsMoon.png" alt=""/>
     </a>
   </p>
   <div
-    style="position: relative; width: 100%; height: 0; padding-top: 58.8235%;
-padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
+    style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
     <iframe loading="lazy"
       style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
       src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
-      allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+      allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
   </div>
 </body>
 
