--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <picture id="btnWhatsapp">
     <a href="https://maper.info/29j736" target="_blank">
       <video muted autoplay loop>
-        <source src="FALE-CONOSCO-DESKTOP.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}" >
-        <source src="FALE-CONOSCO-MOBILE.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
+        <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+          style="video::internal-media-controls{display: none;}">
+        <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+          style="video::internal-media-controls{display: none;}">
       </video>
-            </a>
+    </a>
   </picture>
   <header>
     <nav>
@@ -47,7 +49,7 @@
     </nav>
   </header>
   <video muted autoplay loop>
-    <source src="primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}" >
+    <source src="primeiro.mp4" media="(max-width: 500px)" style="video::internal-media-controls{display: none;}">
     <source src="Infinity.mp4" media="(min-width: 501px)" style="video::internal-media-controls{display: none;}">
   </video>
   <div class="interface">
@@ -75,14 +77,14 @@
     </section>
   </div>
   <div style="background-color: #230d731a;">
-  <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
-  <p>
-    Clique
-    <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao
-    <strong>formulario</strong> de inscrição.
-  </p>
-</div>
-    <div class="interface">        
+    <p>Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.</p>
+    <p>
+      Clique
+      <a href="#form" target="_blank"><button type="button" id="ixd01">aqui</button></a> para acessar ao
+      <strong>formulario</strong> de inscrição.
+    </p>
+  </div>
+  <div class="interface">
     <section>
       <h2>Nossa Missão</h2>
       <ul>
@@ -131,11 +133,11 @@
     </section>
     <h1>Venha conversar e compartilhe sua ideia conosco.</h1>
     <p style="background-color: #230d731a;">
-      Aqui você vai encontrar um grupo de 
+      Aqui você vai encontrar um grupo de
       <strong style="color:#230D73">
         Desenvolvedores, UI x UX
-          </strong>
-           e estrategistas de trafego
+      </strong>
+      e estrategistas de trafego
       <strong style="color: #230D73">
         organico
       </strong>
@@ -146,10 +148,11 @@
       atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
     <p>
-      Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e uma mistura de engenharia social.
+      Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de computação e
+      uma mistura de engenharia social.
     </p>
     <picture id="grafico">
-      <img src="lucro.png" alt=""/>
+      <img src="lucro.png" alt="" />
     </picture>
     <h1 id="form">
       Aguardo ancioso para um entrevista.
@@ -162,15 +165,16 @@
       </strong>
     </h2>
     <p style="text-align: center;">
-      RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+      RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR
+      DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
     </p>
     <p style="background-color: white;">
       Clique
       <a href="https://iplis.ru/meu-portifolio" target="_blank">
         <button type="button" id="ixd01">
-        aqui
-      </button>
-    </a>
+          aqui
+        </button>
+      </a>
       para ter mais informações do nosso
       <strong>
         Portifolio
@@ -194,7 +198,7 @@
       <strong>
         PK Produtos Digitais
       </strong>
-      <img src="iconsMoon.png" alt=""/>
+      <img src="iconsMoon.png" alt="" />
     </a>
   </p>
   <div
