--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       PK Digital Products, reconhecida por sua qualidade, inovação e atendimento personalizado.
     </h1>
     <p style=" font-size: medium; max-width: 500px;background-color: #230d731a;">
-      A empresa conta com uma equipe de profissionais altamente
-      qualificados, que estão sempre atualizados com as últimas tendências tecnológicas.
+      Original: Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago
+      atuamos principalmente com a venda e revenda de scripts ou modelos.
     </p>
     <h1>
       Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
